sidux-art-pontos (0.0) unstable; urgency=low

  * Initial Release.
  * update wallpaper for inkscape 0.46-2 

 -- Bernard Gray <bernard.gray@gmail.com>  Wed, 08 Oct 2008 20:40:54 +1100